// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Haas /> Should render HaaS component and accept a valid token. 1`] = `
<div>
  <h1>
    Honeypot as a Service
  </h1>
  <p>
    Honeypot as a Service (HaaS) is a special software which simulates an operating system and allows an attacker to log in via SSH or telnet and execute commands or download malware.
  </p>
  <p>
    If you want to use Honeypot as a Service on your router, you should have the public IPv4 address, register on the HaaS website, and fill out the token. Also, there you can see sessions and statistics from the SSH honeypot from your router. For more information click 
    <a
      href="https://haas.nic.cz/"
      rel="noopener noreferrer"
      target="_blank"
    >
      here
      <sup>
        <i
          class="fas fa-external-link-alt link-outside-icon fa-xs ml-1"
        />
      </sup>
    </a>
    .
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Proxy Settings
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable HaaS proxy
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          HaaS token
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            type="text"
            value="0008033cd3b4566ead6c50862d1e0cc7111111abcadf1111"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Token used to match SSH session with device in HaaS proxy.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Haas /> Should render HaaS component. 1`] = `
<div>
  <h1>
    Honeypot as a Service
  </h1>
  <p>
    Honeypot as a Service (HaaS) is a special software which simulates an operating system and allows an attacker to log in via SSH or telnet and execute commands or download malware.
  </p>
  <p>
    If you want to use Honeypot as a Service on your router, you should have the public IPv4 address, register on the HaaS website, and fill out the token. Also, there you can see sessions and statistics from the SSH honeypot from your router. For more information click 
    <a
      href="https://haas.nic.cz/"
      rel="noopener noreferrer"
      target="_blank"
    >
      here
      <sup>
        <i
          class="fas fa-external-link-alt link-outside-icon fa-xs ml-1"
        />
      </sup>
    </a>
    .
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Proxy Settings
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable HaaS proxy
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
